  * added a Deployer targeting ShowVoc
  * added an exporter for a selected scheme
  * fixed a bug related to an exception about the use of abstract datasets erroneously raised in assisted search when
    selecting a local project
  * fixed a bug related to transaction management preventing the execution of assisted search on local projects

version 11.1
date: 23/06/2022
  * updated the internal copy of the core vocabulary LexInfo 3 used in conjunction with OntoLex-Lemon
  * collected plain sense relationships as "related" senses instead of "terminologicallyRelated" senses in the LexicographerView
  * introduced the new access level "EXT" for universal project accessibility (if a user has access to the project, ACL table 
    does not need to be consulted even if the user access it from another consumer)
  * fixed several bugs related to the MDR
  * fixed a bug when showing Manchester Expressions in a project having a reasoner configured
  * fixed a bug in the Global Search when dealing with numbers, symbols and punctuation
  * fixed a bug when parsing the response of the Data EU Connector datasets search
  * minor bugfixes and improvements
  * updated dependency on MAPLE 0.0.12
  * updated dependency on CODA 1.7.6
  * updated dependency on Sheet2RDF 5.0.2

version 11.0
date: 12/05/2022
  * resolved a bug concerning repeated delivery of the same event to event listeners. Among the other issues, this might
    cause the generation of multiple resource metadata
  * added a setting for hiding the stack trace in error responses
  * added a connector to EcoPortal and other catalogs based on OntoPortal
  * introduced SuperUsers
    - allowed SuperUser to create projects and then get the role Project Manager automatically assigned to them.
  * introduced a renewed model for CFs, with a more general management of CCs vs CRs
  * introduced support for Custom Views (CVs) and possibility to match data on specific widgets
  * improved authorization checks on several APIs